属性n 置き換え機能追加後